Fix console clearing issue in java